Style docs search results so they're visible. Fixes #5

--- a/docs/assets/scss/docs.scss
+++ b/docs/assets/scss/docs.scss
@@ -98,6 +98,11 @@ $jcu-gradient-color: #fff;
   padding-top: $spacer;
 }
 
+.bd-search-results {
+  opacity: 1;
+  visibility: visible;
+}
+
 .bd-pageheader,
 .bd-masthead,
 .bd-example--inverse {
